# EffectiveCPP

./: .gitignore  CMakeLists.txt  READ.MD  README.MD  function.cpp  item10.cpp  item11.cpp  item12.cpp  item13.cpp  item14.cpp  item15.cpp  item17.cpp  item18  item18.cpp  item19.cpp  item20.cpp  item21.cpp  item23.cpp  item25.cpp  item26.cpp  item27.cpp  item28.cpp  item30.cpp  item31.cpp  item32.cpp  item33.cpp  item34.cpp  item36.cpp  item37.cpp  item38.cpp  item39.cpp  item40.cpp  item5.cpp  item6.cpp  item7.cpp  item8.cpp  item9.cpp  main.cpp
Item22/: item22.cpp  item22.h
practice/: CMakeLists.txt  c_string_and_string.cpp  shared_ptr.cpp  simple_string.cpp  unique_ptr.cpp  unique_ptr_bak.cpp
